# kiwi-torch

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/mnist/: CMakeLists.txt  train_mnist.cpp
examples/sentiment/: CMakeLists.txt
include/: operators.hpp
include/kiwitorch/: kiwitorch.hpp  operators.hpp
include/kiwitorch/core/: module.hpp  operators.hpp  scalar.hpp  tensor.hpp
script/: format.sh
src/: main.cpp  operators.cpp
tests/: CMakeLists.txt  test_library.cpp  test_operators.cpp
